Colocando os nomes dos alunos no footer da tela home

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -148,7 +148,7 @@
         <!-- Rodapé -->
         <footer>
             <p>© 2025 Sistema de Tarefas | Todos os direitos reservados</p>
+            <p>Alunos: Jullia Acsa & Rivaldo Roberto</p>
         </footer>
-
     </body>
 </html>
