Alterando nomeclatura do html e rota

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,7 +93,7 @@
             <p>Gerencie suas tarefas de forma organizada e eficiente.</p>
             <nav>
                 <a href="/login">Fazer Login</a>
-                <a href="/cadastro">Cadastrar Usuário</a>
+                <a href="/cadastro-usuario">Cadastrar Usuário</a>
             </nav>
         </header>
 
