--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -118,7 +118,7 @@
       </form>
 
       <div class="link">
-        <a href="/cadastro">Não tem conta? Cadastre-se</a>
+        <a href="/cadastro-usuario">Não tem conta? Cadastre-se</a>
       </div>
 
       <div class="voltar">
