--- a/src/main/resources/templates/cadastro-usuario.html
+++ b/src/main/resources/templates/cadastro-usuario.html
@@ -103,7 +103,7 @@
 
     <div class="container">
       <h2>Cadastro de Usuário</h2>
-      <form action="/cadastro" method="POST">
+      <form action="/cadastro-usuario" method="POST">
         <div class="input-group">
           <label for="nome">Nome</label>
           <input type="text" id="nome" name="nome" required>
